--- a/运筹优化/ortools代码/路由问题.md
+++ b/运筹优化/ortools代码/路由问题.md
@@ -5,15 +5,24 @@ def create_data_model():
     """Stores the data for the problem."""
     data = {}
     data['distance_matrix'] = [
-        [0, 2, 9, 10],
-        [1, 0, 6, 4],
-        [15, 7, 0, 8],
-        [6, 3, 12, 0],
+        [0, 9, 7, 3, 6],
+        [9, 0, 10, 4, 8],
+        [7, 10, 0, 5, 3],
+        [3, 4, 5, 0, 7],
+        [6, 8, 3, 7, 0],
     ]
-    data['demands'] = [0, 1, 1, 2]  # Demands at each location
-    data['vehicle_capacities'] = [3, 3]  # Capacities of each vehicle
+    data['demands'] = [0, 1, 1, 2, 4]
+    data['vehicle_capacities'] = [5, 5]
+    data['time_windows'] = [
+        (0, 5),  # depot
+        (7, 12),  # 1
+        (10, 15),  # 2
+        (5, 10),  # 3
+        (0, 5),  # 4
+    ]
     data['num_vehicles'] = 2
-    data['depot'] = 0  # Starting point for all vehicles
+    data['depot'] = 0
+    data['vehicle_routes'] = [[0, 1, 2, 0], [0, 3, 4, 0]]  # predefined routes
     return data
 
 def print_solution(data, manager, routing, solution):
@@ -28,11 +37,16 @@ def print_solution(data, manager, routing, solution):
         while not routing.IsEnd(index):
             node_index = manager.IndexToNode(index)
             route_load += data['demands'][node_index]
-            plan_output += ' {0} Load({1}) -> '.format(node_index, route_load)
+            time_var = routing.GetMutableDimension('Time').CumulVar(index)
+            plan_output += ' {0} Load({1}) Time({2},{3}) -> '.format(
+                node_index, route_load, solution.Min(time_var), solution.Max(time_var))
             previous_index = index
             index = solution.Value(routing.NextVar(index))
             route_distance += routing.GetArcCostForVehicle(previous_index, index, vehicle_id)
-        plan_output += ' {0} Load({1})\n'.format(manager.IndexToNode(index), route_load)
+        node_index = manager.IndexToNode(index)
+        time_var = routing.GetMutableDimension('Time').CumulVar(index)
+        plan_output += ' {0} Load({1}) Time({2},{3})\n'.format(
+            node_index, route_load, solution.Min(time_var), solution.Max(time_var))
         plan_output += 'Distance of the route: {}m\n'.format(route_distance)
         plan_output += 'Load of the route: {}\n'.format(route_load)
         print(plan_output)
@@ -42,7 +56,7 @@ def print_solution(data, manager, routing, solution):
     print('Total load of all routes: {}'.format(total_load))
 
 def main():
-    """Solve the CVRP problem."""
+    """Solve the VRP with capacity, time window, and path constraints."""
     # Instantiate the data problem.
     data = create_data_model()
 
@@ -55,7 +69,6 @@ def main():
 
     def distance_callback(from_index, to_index):
         """Returns the distance between the two nodes."""
-        # Convert from routing variable Index to distance matrix NodeIndex.
         from_node = manager.IndexToNode(from_index)
         to_node = manager.IndexToNode(to_index)
         return data['distance_matrix'][from_node][to_node]
@@ -68,7 +81,6 @@ def main():
     # Add Capacity constraint.
     def demand_callback(from_index):
         """Returns the demand of the node."""
-        # Convert from routing variable Index to demands NodeIndex.
         from_node = manager.IndexToNode(from_index)
         return data['demands'][from_node]
 
@@ -79,6 +91,36 @@ def main():
         data['vehicle_capacities'],  # vehicle maximum capacities
         True,  # start cumul to zero
         'Capacity')
+
+    # Add Time Windows constraint.
+    def time_callback(from_index, to_index):
+        """Returns the travel time between the two nodes."""
+        from_node = manager.IndexToNode(from_index)
+        to_node = manager.IndexToNode(to_index)
+        return data['distance_matrix'][from_node][to_node]
+
+    time_callback_index = routing.RegisterTransitCallback(time_callback)
+    routing.AddDimension(
+        time_callback_index,
+        30,  # allow waiting time
+        30,  # maximum time per vehicle
+        False,  # Don't force start cumul to zero.
+        'Time')
+    time_dimension = routing.GetDimensionOrDie('Time')
+    for location_idx, time_window in enumerate(data['time_windows']):
+        if location_idx == data['depot']:
+            continue
+        index = manager.NodeToIndex(location_idx)
+        time_dimension.CumulVar(index).SetRange(time_window[0], time_window[1])
+
+    # Add Path constraint.
+    for vehicle_id, path in enumerate(data['vehicle_routes']):
+        for i in range(len(path) - 1):
+            from_node = path[i]
+            to_node = path[i + 1]
+            from_index = manager.NodeToIndex(from_node)
+            to_index = manager.NodeToIndex(to_node)
+            routing.solver().Add(routing.NextVar(from_index) == to_index)
 
     # Setting first solution heuristic.
     search_parameters = pywrapcp.DefaultRoutingSearchParameters()
@@ -95,15 +137,18 @@ def main():
 if __name__ == '__main__':
     main()
 
+
 ```
-代码解释   
-创建数据模型：create_data_model 函数定义了距离矩阵、需求、车辆容量、车辆数量和仓库位置。  
-创建索引管理器：RoutingIndexManager 用于管理节点和车辆的索引。  
-创建路由模型：RoutingModel 用于定义和解决路径问题。  
-定义距离回调函数：distance_callback 定义了从一个节点到另一个节点的距离。  
-设置弧成本评估器：SetArcCostEvaluatorOfAllVehicles 设置所有车辆的弧成本评估器。  
-添加容量约束：AddDimensionWithVehicleCapacity 添加了车辆的容量约束。  
-设置初始解策略：search_parameters.first_solution_strategy 设置初始解的启发式策略。  
-求解问题：调用 routing.SolveWithParameters 方法求解路径问题。  
-打印解决方案：print_solution 函数打印每辆车的路径、距离和负载。  
-通过运行这个代码，你可以得到一个满足容量限制的车辆路径方案。这个示例展示了如何使用 OR-Tools 来解决带有容量限制的车辆路径问题。  
+代码解释  
+> 创建数据模型：create_data_model 函数定义了距离矩阵、需求、车辆容量、时间窗、车辆数量、仓库位置和预定义路径。  
+> 创建索引管理器：RoutingIndexManager 用于管理节点和车辆的索引。  
+> 创建路由模型：RoutingModel 用于定义和解决路径问题。  
+> 定义距离回调函数：distance_callback 定义了从一个节点到另一个节点的距离。  
+> 设置弧成本评估器：SetArcCostEvaluatorOfAllVehicles 设置所有车辆的弧成本评估器。  
+> 添加容量约束：AddDimensionWithVehicleCapacity 添加了车辆的容量约束。  
+> 添加时间窗约束：AddDimension 添加了时间窗约束，并设置每个位置的时间窗。  
+> 添加路径约束：通过 routing.solver().Add 方法强制每辆车按照预定义的路径行驶。  
+> 设置初始解策略：search_parameters.first_solution_strategy 设置初始解的启发式策略。  
+> 求解问题：调用 routing.SolveWithParameters 方法求解路径问题。  
+> 打印解决方案：print_solution 函数打印每辆车的路径、距离、负载和时间窗。  
+通过运行这个代码，你可以得到一个满足容量限制、时间窗限制和路径限制的车辆路径方案。这个示例展示了如何使用 OR-Tools 来解决复杂的车辆路径问题。  
