--- a/运筹优化/ortools代码/路由问题.md
+++ b/运筹优化/ortools代码/路由问题.md
@@ -1,3 +1,9 @@
+如下代码版权来自gpt,提示语：
+```
+ortools解决路由问题，同时添加容量限定、时间窗限定、路径限定
+```
+
+
 ``` python
 from ortools.constraint_solver import pywrapcp, routing_enums_pb2
 
