--- a/运筹优化/ortools代码/路由问题.md
+++ b/运筹优化/ortools代码/路由问题.md
@@ -1,6 +1,7 @@
-如下代码版权来自gpt,提示语：
+## 路由问题
+如下代码版权来自gpt
 ```
-ortools解决路由问题，同时添加容量限定、时间窗限定、路径限定
+提示语：ortools解决路由问题，同时添加容量限定、时间窗限定、路径限定
 ```
 
 
@@ -157,4 +158,150 @@ if __name__ == '__main__':
 > 设置初始解策略：search_parameters.first_solution_strategy 设置初始解的启发式策略。  
 > 求解问题：调用 routing.SolveWithParameters 方法求解路径问题。  
 > 打印解决方案：print_solution 函数打印每辆车的路径、距离、负载和时间窗。  
-通过运行这个代码，你可以得到一个满足容量限制、时间窗限制和路径限制的车辆路径方案。这个示例展示了如何使用 OR-Tools 来解决复杂的车辆路径问题。  
+通过运行这个代码，你可以得到一个满足容量限制、时间窗限制和路径限制的车辆路径方案。这个示例展示了如何使用 OR-Tools 来解决复杂的车辆路径问题。
+
+
+## 其他来自gpt的回复  
+### 路由问题常见的限制条件
+1. 容量限制（Capacity Constraints）
+容量限制确保每辆车的总负载不超过其容量。
+``` python
+def add_capacity_constraints(routing, manager, data):
+    def demand_callback(from_index):
+        """Returns the demand of the node."""
+        from_node = manager.IndexToNode(from_index)
+        return data['demands'][from_node]
+
+    demand_callback_index = routing.RegisterUnaryTransitCallback(demand_callback)
+    routing.AddDimensionWithVehicleCapacity(
+        demand_callback_index,
+        0,  # null capacity slack
+        data['vehicle_capacities'],  # vehicle maximum capacities
+        True,  # start cumul to zero
+        'Capacity')
+```
+2. 时间窗口限制（Time Window Constraints）
+时间窗口限制确保每个节点在指定的时间范围内被访问。
+``` python 
+def add_time_window_constraints(routing, manager, data):
+    def time_callback(from_index, to_index):
+        """Returns the travel time between the two nodes."""
+        from_node = manager.IndexToNode(from_index)
+        to_node = manager.IndexToNode(to_index)
+        return data['time_matrix'][from_node][to_node]
+
+    transit_callback_index = routing.RegisterTransitCallback(time_callback)
+    routing.AddDimension(
+        transit_callback_index,
+        30,  # allow waiting time
+        30,  # maximum time per vehicle
+        False,  # Don't force start cumul to zero.
+        'Time')
+
+    time_dimension = routing.GetDimensionOrDie('Time')
+    for location_idx, time_window in enumerate(data['time_windows']):
+        if location_idx == data['depot']:
+            continue
+        index = manager.NodeToIndex(location_idx)
+        time_dimension.CumulVar(index).SetRange(time_window[0], time_window[1])
+```
+
+3. 距离限制（Distance Constraints）
+距离限制确保每辆车的总行驶距离不超过指定的最大距离。
+``` python 
+def add_distance_constraints(routing, manager, data):
+    def distance_callback(from_index, to_index):
+        """Returns the distance between the two nodes."""
+        from_node = manager.IndexToNode(from_index)
+        to_node = manager.IndexToNode(to_index)
+        return data['distance_matrix'][from_node][to_node]
+
+    transit_callback_index = routing.RegisterTransitCallback(distance_callback)
+    routing.AddDimension(
+        transit_callback_index,
+        0,  # no slack
+        3000,  # maximum distance per vehicle
+        True,  # start cumul to zero
+        'Distance')
+```
+4. 强制访问节点（Mandatory Visits）
+强制访问节点确保某些节点必须被访问。
+``` python
+def add_mandatory_visits(routing, manager, data):
+    penalty = 1000000
+    for node in data['mandatory_nodes']:
+        routing.AddDisjunction([manager.NodeToIndex(node)], penalty)
+```
+5. 车辆访问限制（Vehicle Access Restrictions）
+车辆访问限制确保某些节点只能被特定的车辆访问。
+``` python 
+def add_vehicle_restrictions(routing, manager, data):
+    restricted_node_index = manager.NodeToIndex(data['restricted_node'])
+    routing.SetAllowedVehiclesForIndex([0], restricted_node_index)
+```
+6. 车辆起点和终点限制（Vehicle Start and End Constraints）
+可以为每辆车设置不同的起点和终点。
+``` python 
+def set_vehicle_start_end(routing, manager, data):
+    for vehicle_id in range(data['num_vehicles']):
+        routing.SetStart(vehicle_id, manager.NodeToIndex(data['starts'][vehicle_id]))
+        routing.SetEnd(vehicle_id, manager.NodeToIndex(data['ends'][vehicle_id]))
+``` 
+7. 路径长度限制（Path Length Constraints）
+路径长度限制确保每条路径的长度不超过指定的最大值。
+``` python
+def add_path_length_constraints(routing, manager, data):
+    def distance_callback(from_index, to_index):
+        """Returns the distance between the two nodes."""
+        from_node = manager.IndexToNode(from_index)
+        to_node = manager.IndexToNode(to_index)
+        return data['distance_matrix'][from_node][to_node]
+
+    transit_callback_index = routing.RegisterTransitCallback(distance_callback)
+    routing.AddDimension(
+        transit_callback_index,
+        0,  # no slack
+        1000,  # maximum distance per route
+        True,  # start cumul to zero
+        'PathLength')
+```
+8. 车辆最大工作时间限制（Vehicle Maximum Working Time Constraints）
+确保每辆车的工作时间不超过指定的最大值。
+``` python 
+def add_working_time_constraints(routing, manager, data):
+    def time_callback(from_index, to_index):
+        """Returns the travel time between the two nodes."""
+        from_node = manager.IndexToNode(from_index)
+        to_node = manager.IndexToNode(to_index)
+        return data['time_matrix'][from_node][to_node]
+
+    transit_callback_index = routing.RegisterTransitCallback(time_callback)
+    routing.AddDimension(
+        transit_callback_index,
+        0,  # no slack
+        480,  # maximum time per vehicle
+        True,  # start cumul to zero
+        'WorkingTime')
+``` 
+9. 车辆平衡负载限制（Balance Load Constraints）
+平衡负载限制确保所有车辆的负载尽可能均衡。
+``` python 
+def add_balance_load_constraints(routing, manager, data):
+    capacity_dimension = routing.GetDimensionOrDie('Capacity')
+    load_vars = []
+    for vehicle_id in range(data['num_vehicles']):
+        end_index = routing.End(vehicle_id)
+        load_vars.append(capacity_dimension.CumulVar(end_index))
+    routing.AddEquality(load_vars)
+``` 
+
+
+### SetAllowedVehiclesForIndex和AddDisjunction的区别
+在 OR-Tools 中，SetAllowedVehiclesForIndex 和 AddDisjunction 是两种不同的约束设置方法，用于处理车辆路径问题（VRP）中的不同需求。以下是对这两种方法的详细解释和示例。  
+SetAllowedVehiclesForIndex  
+SetAllowedVehiclesForIndex 方法用于指定某个节点只能被特定的车辆访问。这在某些情况下非常有用，例如某些节点只能由特定类型的车辆访问。  
+
+AddDisjunction  
+AddDisjunction 方法用于为一组节点添加选择性访问约束，并为不访问这些节点设置惩罚。通过设置一个非常大的惩罚值，可以强制求解器访问这些节点。  
+
+
